proj/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package proj.parser;

import proj.ast.*;
import proj.*;
import proj.types.*;
import proj.errors.*;
import proj.env.*;

import java.util.*;

public class Parser implements ParserConstants {

  static final public ASTNode Start() throws ParseException {
  ASTNode t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
           {if (true) return null;}
      break;
    case LET:
    case Bool:
    case LinBool:
    case NIL:
    case MINUS:
    case LPAR:
    case LCRL:
    case LBRA:
    case NOT:
    case IF:
    case PRINT:
    case PRINTLN:
    case FN:
    case LFN:
    case MATCH:
    case TYPE:
    case TUNIT:
    case SPLIT:
    case LABEL:
    case String:
    case Id:
    case LinNum:
    case Num:
      t = Let();
      jj_consume_token(TERM);
                       {if (true) return t;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Let() throws ParseException {
  Token n;
  ASTNode t, e1, e2;
  ASTType t1 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Bool:
    case LinBool:
    case NIL:
    case MINUS:
    case LPAR:
    case LCRL:
    case LBRA:
    case NOT:
    case IF:
    case PRINT:
    case PRINTLN:
    case FN:
    case LFN:
    case MATCH:
    case TUNIT:
    case SPLIT:
    case LABEL:
    case String:
    case Id:
    case LinNum:
    case Num:
      t = Seq();
      break;
    case LET:
       List<Bind> decls  = new ArrayList<Bind>();
      label_1:
      while (true) {
        jj_consume_token(LET);
        n = jj_consume_token(Id);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COLON:
          jj_consume_token(COLON);
          t1 = Type();
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(EQUAL);
        e1 = BA();
        jj_consume_token(SEMIC);
        decls.add(new Bind(n.image, t1, e1)); t1 = null;
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
      }
      e2 = Let();
                     t = new ASTLet(decls, e2);
      break;
    case TYPE:
        HashMap<String,ASTType> lbl = new HashMap<String,ASTType>();
      label_2:
      while (true) {
        jj_consume_token(TYPE);
        n = jj_consume_token(Id);
        jj_consume_token(EQUAL);
        t1 = Type();
        jj_consume_token(SEMIC);
        if (lbl.containsKey(n.image)) { {if (true) throw new ParseException("duplicate id");} } else { lbl.put(n.image, t1); }
        if (jj_2_2(2)) {
          ;
        } else {
          break label_2;
        }
      }
      e2 = Let();
                     t = new ASTTypeDef(lbl, e2);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Seq() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = SeqExp();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      op = jj_consume_token(SEMIC);
      t2 = SeqExp();
                 t1 = new ASTSeq(t1, t2);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode SeqExp() throws ParseException {
 Token op;
  ASTNode t1, t2, t;
    t1 = BA();
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode BA() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BM();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      op = jj_consume_token(OR);
      t2 = BM();
     t1 = new ASTLogicOp(t1, t2, "||");
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode BM() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Rel();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      op = jj_consume_token(AND);
      t2 = Rel();
                 t1 = new ASTLogicOp(t1, t2, "&&");
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Rel() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Exp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case GT:
    case LT:
    case GTEQ:
    case LTEQ:
    case DIF:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        op = jj_consume_token(EQ);
        break;
      case GT:
        op = jj_consume_token(GT);
        break;
      case LT:
        op = jj_consume_token(LT);
        break;
      case GTEQ:
        op = jj_consume_token(GTEQ);
        break;
      case LTEQ:
        op = jj_consume_token(LTEQ);
        break;
      case DIF:
        op = jj_consume_token(DIF);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Exp();
      t1 = new ASTCmpOp(t1, t2, op.image);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Exp() throws ParseException {
  Token op;
  ASTNode t1, t2;
    t1 = Term();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        op = jj_consume_token(PLUS);
        break;
      case MINUS:
        op = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
                   if (op.kind == PLUS)
                         t1 = new ASTArithOp(t1,t2,"+");
                   else  t1 = new ASTArithOp(t1,t2,"-");
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Term() throws ParseException {
 Token op, n;
  ASTNode t1, t2;
    t1 = Field();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONS:
    case LCONS:
    case TENSOR:
    case PAIR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONS:
        op = jj_consume_token(CONS);
        break;
      case LCONS:
        op = jj_consume_token(LCONS);
        break;
      case TENSOR:
        op = jj_consume_token(TENSOR);
        break;
      case PAIR:
        op = jj_consume_token(PAIR);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
              if (op.kind == CONS) t1 = new ASTCons(t1,t2);
              else if (op.kind == LCONS) t1 = new ASTLcons(t1,t2);
              else if (op.kind == TENSOR) t1 = new ASTTensor(t1, t2);
              else if (op.kind == PAIR) t1 = new ASTPair(t1, t2);
      break;
    default:
      jj_la1[13] = jj_gen;
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
        case DIV:
        case LPAR:
        case TUNIT:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_7;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
          op = jj_consume_token(STAR);
          t2 = Field();
                                t1 = new ASTArithOp(t1,t2,"*");
          break;
        case DIV:
          op = jj_consume_token(DIV);
          t2 = Field();
                                          t1 = new ASTArithOp(t1,t2,"/");
          break;
        case LPAR:
          op = jj_consume_token(LPAR);
          t2 = Let();
          jj_consume_token(RPAR);
                                                   t1 = new ASTApp(t1, t2);
          break;
        case TUNIT:
          op = jj_consume_token(TUNIT);
                    t1 = new ASTApp(t1, new ASTUnit());
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Field() throws ParseException {
  Token n;
  ASTNode t;
    t = Fact();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      jj_consume_token(DOT);
      n = jj_consume_token(LABEL);
                                       t = new ASTSelect(t, n.image);
    }
       {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Fact() throws ParseException {
  Token n, n2;
  ASTNode t, e1, e2, t2;
  List<Bind> decls;
  ASTNode body, alt;
  ASTFunc tf, tc, tn;
  ASTLFunc ltf, ltc, ltn;
  ASTType type;
  ExprBindList ll;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Num:
      n = jj_consume_token(Num);
                t = new ASTInt(Integer.parseInt(n.image));
      break;
    case LinNum:
      n = jj_consume_token(LinNum);
                   t = new ASTLInt(Integer.parseInt(n.image.substring(0, n.image.length()-1)));
      break;
    case Bool:
      n = jj_consume_token(Bool);
                 t = new ASTBool(Boolean.parseBoolean(n.image));
      break;
    case LinBool:
      n = jj_consume_token(LinBool);
                    t = new ASTLBool(Boolean.parseBoolean(n.image.substring(0, n.image.length()-1)));
      break;
    case Id:
      n = jj_consume_token(Id);
                 t = new ASTId(n.image);
      break;
    case String:
      n = jj_consume_token(String);
                   t = new ASTString(n.image.substring(1, n.image.length()-1));
      break;
    case TUNIT:
      jj_consume_token(TUNIT);
                t = new ASTUnit();
      break;
    case MINUS:
      jj_consume_token(MINUS);
      t = Fact();
                         t = new ASTArithOp(new ASTInt(0), t, "-u");
      break;
    case NOT:
      jj_consume_token(NOT);
      t = Fact();
                       t = new ASTLogicOp(new ASTBool(true), t, "~");
      break;
    case IF:
      jj_consume_token(IF);
      t = BA();
      jj_consume_token(LCRL);
      e1 = Let();
      jj_consume_token(RCRL);
      jj_consume_token(ELSE);
      jj_consume_token(LCRL);
      e2 = Let();
      jj_consume_token(RCRL);
                                                                         t = new ASTIf(t, e1, e2);
      break;
    case FN:
      jj_consume_token(FN);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      type = Type();
                                          tf = new ASTFunc(n.image, null, type); tc = tf;
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);
        jj_consume_token(COLON);
        type = Type();
                                                          tn = new ASTFunc(n.image, null, type); tc.setBody(tn); tc = tn;
      }
      jj_consume_token(ARROW);
      jj_consume_token(LCRL);
      e2 = Let();
      jj_consume_token(RCRL);
                                                             tc.setBody(e2); t = tf;
      break;
    case LFN:
      jj_consume_token(LFN);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      type = Type();
                                           ltf = new ASTLFunc(n.image, null, type); ltc = ltf;
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_10;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);
        jj_consume_token(COLON);
        type = Type();
                                                          ltn = new ASTLFunc(n.image, null, type); ltc.setBody(ltn); ltc = ltn;
      }
      jj_consume_token(DLOLLIPOP);
      jj_consume_token(LCRL);
      e2 = Let();
      jj_consume_token(RCRL);
                                                                 ltc.setBody(e2); t = ltf;
      break;
    case PRINT:
      jj_consume_token(PRINT);
      t = Fact();
                         t = new ASTPrint(t, false);
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      t = Fact();
                           t = new ASTPrint(t, true);
      break;
    case NIL:
      n = jj_consume_token(NIL);
                t = new ASTNil();
      break;
    case MATCH:
      jj_consume_token(MATCH);
      t2 = Let();
      jj_consume_token(LCRL);
      t = Match(t2);
      break;
    case LCRL:
      jj_consume_token(LCRL);
      ll = ExprList();
      jj_consume_token(RCRL);
                                      t = new ASTStruct(ll);
      break;
    case LBRA:
      jj_consume_token(LBRA);
      ll = ExprList();
      jj_consume_token(RBRA);
                                      t = new ASTLStruct(ll);
      break;
    case LABEL:
      n = jj_consume_token(LABEL);
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
                                            t = new ASTUnion(n.image, t);
      break;
    case SPLIT:
      jj_consume_token(SPLIT);
      t2 = Let();
      jj_consume_token(LCRL);
      t = Split(t2);
      break;
    case LPAR:
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Split(ASTNode p) throws ParseException {
  Token n, n2;
  ASTNode t, t2;
  IdBindList ll;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      n = jj_consume_token(Id);
      jj_consume_token(VERT);
      n2 = jj_consume_token(Id);
      jj_consume_token(SLIMARROW);
      t2 = Let();
      jj_consume_token(RCRL);
                                                              t = new ASTSplitPair(p, n.image, n2.image, t2);
      break;
    case SLIMARROW:
    case LABEL:
      ll = IdList();
      jj_consume_token(SLIMARROW);
      t2 = Let();
      jj_consume_token(RCRL);
                                                  t = new ASTSplitLStruct(p, ll, t2);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Match(ASTNode p) throws ParseException {
  Token l, n, n2;
  ASTNode t, e1, e2;
  List<String> labels = new ArrayList<String>();
  List<String> ids = new ArrayList<String>();
  List<ASTNode> exprs = new ArrayList<ASTNode>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NIL:
      jj_consume_token(NIL);
      jj_consume_token(SLIMARROW);
      e1 = Let();
      jj_consume_token(VERT);
      n = jj_consume_token(Id);
      jj_consume_token(CONS);
      n2 = jj_consume_token(Id);
      jj_consume_token(SLIMARROW);
      e2 = Let();
      jj_consume_token(RCRL);
            t = new ASTMatchList(p, e1, n.image, n2.image, e2);
      break;
    case LABEL:
      l = jj_consume_token(LABEL);
      jj_consume_token(LPAR);
      n = jj_consume_token(Id);
      jj_consume_token(RPAR);
      jj_consume_token(SLIMARROW);
      e1 = Let();
                                                                labels.add(l.image); ids.add(n.image); exprs.add(e1);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VERT:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_11;
        }
        jj_consume_token(VERT);
        l = jj_consume_token(LABEL);
        jj_consume_token(LPAR);
        n = jj_consume_token(Id);
        jj_consume_token(RPAR);
        jj_consume_token(SLIMARROW);
        e1 = Let();
                                                                              if (labels.contains(l.image))
                                              { {if (true) throw new ParseException("duplicate label");} }
                                              else { labels.add(l.image); ids.add(n.image); exprs.add(e1); }
      }
      jj_consume_token(RCRL);
                   t = new ASTMatchUnion(p, labels, ids, exprs);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTType Type() throws ParseException {
  ASTType t1, t2;
    t1 = TypeF();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOLLIPOP:
    case SLIMARROW:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SLIMARROW:
        jj_consume_token(SLIMARROW);
        t2 = Type();
                                t1 = new ASTTArrow(t1,t2);
        break;
      case LOLLIPOP:
        jj_consume_token(LOLLIPOP);
        t2 = Type();
                               t1 = new ASTTLollipop(t1, t2);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
      {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }
